--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.1"
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.20.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.2.0",
