--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,7 @@ DB_USER=database_user_name
 DB_PASS=database_password
 DB_DIALECT=postgres
 DB_NAME_TEST=test_database_name
+# project uses DB_NAME_DEVELOPMENT name 
 DB_NAME_DEVELOPMENT=development_database_name
 DB_NAME_PRODUCTION=production_database_name
 
