--- a/backend/package.json
+++ b/backend/package.json
@@ -39,10 +39,10 @@
     "rxjs": "^7.8.1",
     "sequelize": "^6.35.0",
     "sequelize-cli": "^6.6.2",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "@nestjs/cli": "^10.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
